# manga-notifier-telegram

./: .gitignore  Cargo.toml  README.md
src/: data_types.rs  database.rs  handlers.rs  main.rs  manga_info_getter.rs
src/data_types/: manga_types.rs
src/database/: client.rs  client_subscription.rs  manga.rs
